source/grammar/tests/invalid/statements/calibration.qasm
defcalgrammar "openpulse" defcalgrammar "openpulse";
defcalgrammar 3;
defcal x $0 -> int[8] -> int[8] {}
